--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <button id="getWeatherButton">Get Current Weather</button>
+    <div id="weatherData"></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
